--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,12 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 
 add_subdirectory(lib)
 
+option (WITH_TESTS "build tests" ON)
+
+if (WITH_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
 
 # Add all targets to the build-tree export set
 export(TARGETS bclib
