Adding dynamic array and tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,5 +2,9 @@ include_directories(../lib/include)
 
 add_executable(bclib-list-test "list-test.c")
 target_link_libraries(bclib-list-test bclib)
-add_test(tests bclib-list-test)
+add_test(list-tests bclib-list-test)
+
+add_executable(bclib-darray-test "darray-test.c")
+target_link_libraries(bclib-darray-test bclib)
+add_test(darray-tests bclib-darray-test)
 
