Autogenerating test build config

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 include_directories(../lib/include)
 
-add_executable(bclib-list-test "list-test.c")
-target_link_libraries(bclib-list-test bclib)
-add_test(list-tests bclib-list-test)
+file(GLOB_RECURSE TEST_SOURCES "src/*.c")
 
-add_executable(bclib-darray-test "darray-test.c")
-target_link_libraries(bclib-darray-test bclib)
-add_test(darray-tests bclib-darray-test)
+foreach(TEST_FILE ${TEST_SOURCES})
+    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
+    add_executable("bclib-${TEST_NAME}" ${TEST_FILE})
+    target_link_libraries("bclib-${TEST_NAME}" bclib)
+    add_test("${TEST_NAME}s" "bclib-${TEST_NAME}")
+endforeach(TEST_FILE)
 
