Add dbg to the exported headers

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES
 set(HEADERS
     "include/bstrlib.h"
     "include/darray.h"
+    "include/dbg.h"
     "include/hashmap.h"
     "include/list.h"
     "include/simple_list.h"
