Link ringbuffer test against lib pthread

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,6 @@ set(TEST_SOURCES
     "src/hashmap-test.c"
     "src/list-test.c"
     "src/simple_list-test.c"
-    "src/ringbuffer-test.c"
     "src/stack-test.c"
     )
 
@@ -15,6 +14,18 @@ foreach(TEST_FILE ${TEST_SOURCES})
     get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
     add_executable("bclib-${TEST_NAME}" ${TEST_FILE})
     target_link_libraries("bclib-${TEST_NAME}" bclib)
+    add_test("${TEST_NAME}s" "bclib-${TEST_NAME}")
+endforeach(TEST_FILE)
+
+set(PTHREAD_TEST_SOURCES
+    "src/ringbuffer-test.c"
+    )
+
+foreach(TEST_FILE ${PTHREAD_TEST_SOURCES})
+    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
+    add_executable("bclib-${TEST_NAME}" ${TEST_FILE})
+    target_link_libraries("bclib-${TEST_NAME}" bclib)
+    target_link_libraries("bclib-${TEST_NAME}" pthread)
     add_test("${TEST_NAME}s" "bclib-${TEST_NAME}")
 endforeach(TEST_FILE)
 
